Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
   <div class="wrapper">
     
     <h1>Welcome to Riyadh</h1>
-    <h2>here A Traditional Past Meets A Modern Future.</h2>
-    <!-- HEADER 
-    HEADING
-
-`Welcome to Riyadh`
-
-SUB HEAD
-
-`Where A Traditional Past Meets A Modern Future.`
+    <h2>Where A Traditional Past Meets A Modern Future.</h2>
+  
+    <div id="content">
+      
+    <img src="transit.jpg">
 
 IMAGE 1 FILE
 
@@ -78,8 +74,6 @@ LINK 2
 `http://en.wikipedia.org/wiki/Riyadh`-->
     <!-- SUB HEAD -->
 
-    <div id="content">
-      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     </div>
   </div>
 </body>
