--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   
     <div id="content">
       
-    <img src="transit.jpg">
+    <img src="transit.jpg" alt="picture of something">
+    <img src=".jpg" alt="picture of something">
 
 IMAGE 1 FILE
 
