--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="content">
       
     <img src="./images/transportation/transit.jpg" alt="picture of something">
-    <img src=".jpg" alt="picture of something">
+    <img src="./images/transportation/camels-in-truck.jpg" alt="picture of something">
 
 IMAGE 1 FILE
 
