--- a/index.html
+++ b/index.html
@@ -13,24 +13,17 @@
   
     <div id="content">
       
-    <img src="./images/transportation/transit.jpg" alt="picture of something">
+    <img src="./images/transportation/transit.jpg" alt="Modern Transit">
     <img src="./images/transportation/camels-in-truck.jpg" alt="picture of something">
+    <h3>Travel</h3>
+    <p>Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.</p>
 
-IMAGE 1 FILE
 
-`transit.jpg`
 
-IMAGE 1 ALT TEXT
 
-`Modern Transit`
 
-SMALLER SUB HEAD
 
-`Travel`
-
-PARAGRAPH 1
-
-`Once a mudbrick waystation along desert trading routes, Riyadh is now one of the wealthiest cities in the world. The country’s political, financial and administrative capital is also a city with a fascinating subtext.`
+<!--
 
 SMALLER SUB HEAD
 
