--- a/index.html
+++ b/index.html
@@ -28,19 +28,10 @@
 
 
       <p>LINK 1</p>
-      
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
+   
       <p>LINK 2</p>
-
-LINK 1
-
-`Lonely Planet`
-`http://www.lonelyplanet.com/saudi-arabia/riyadh`
-
-LINK 2
-
-`Wikipedia`
-`http://en.wikipedia.org/wiki/Riyadh`-->
-    <!-- SUB HEAD -->
+      <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
 
     </div>
   </div>
