--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 
       <p>LINK 1</p>
-      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">Lonely Planet</a>
    
       <p>LINK 2</p>
-      <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
+      <a href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">Wikipedia</a>
 
     </div>
   </div>
